    - debian/patches/any/cvs-bits-libc-stdio-lock.diff: upstreamed.
    - debian/patches/any/submitted-hle-checking-mutex.diff: upstreamed.
    - debian/{control,symbols.wildcards,copyright}: Updated strings for 2.23.
  * debian/testsuite-xfail-debian.mk (powerpc) mark tst-malloc-thread-fail
    test as xfail, it is a known issue and not a regression.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 12 Mar 2016 12:00:31 +0100

glibc (2.22-3) unstable; urgency=medium

  * Update from upstream stable branch:
    - Fix linking shared objects that use libmvec.so functions.  Closes:
      #817879.
  * debian/sysdeps/sh4.mk: build with -fno-delete-null-pointer-checks to
    workaround a missing SH4 specific __builtin_trap implementation in GCC.
  * debian/patches/localedata/locale-C.diff: fix LC_TIME week and d_t_fmt
    fields in C.UTF-8 locale.  Closes: #817895.
  * debian/sysdeps/powerpcspe.mk: pass --without-fp to the configure script
    on powerpcspe.  Closes: #817926.
  * debian/rules.d/control.mk: add nios2 architecture.  Closes: #817944.
  * debian/patches/any/submitted-dlopen-noload.diff: new patch to fix a crash
    in dlopen() with RTLD_NOLOAD.  Closes: #817900.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 12 Mar 2016 22:40:15 +0100

glibc (2.22-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - Fix pow() precision on CPUs with fma4, and the corresponding testsuite
      failures.
    - debian/patches/s390/submitted-socketcall.diff: drop, merged upstream.
  * debian/libc6{,-mips32,-mipsn32}.symbols.mips64el: add symbols for files for
    mips64el.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 5932 (from
    glibc-bsd):
    - Fix consistency check for PIC code when built with GCC 5.  Closes:
      #817207.
  * debian/rules, debian/rules.d/build.mk, debian/rules.d/debhelper.mk: define
    the mvec variable per flavour and not per platform.
  * sysdeps/*mk: enable libmvec only on amd64 and x32 flavours.