@@ -65,6 +65,8 @@ glibc (2.23-0experimental0) UNRELEASED; urgency=medium
     - debian/{control,symbols.wildcards,copyright}: Updated strings for 2.23.
   * debian/testsuite-xfail-debian.mk (powerpc) mark tst-malloc-thread-fail
     test as xfail, it is a known issue and not a regression.
+  * debian/testsuite-xfail-debian.mk (mipsel): mark a few math tests are
+    failing, due to a bug in the Loongson 3 FPU.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 12 Mar 2016 12:00:31 +0100
 
